--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.go]
+indent_size = 4
+
+[*.js]
 indent_size = 2
 
 [{Makefile,**.mk}]
