--- a/auth-api/glide.yaml
+++ b/auth-api/glide.yaml
@@ -2,3 +2,5 @@ package: github.com/pipizhang/wfw/auth-api
 import:
 - package: github.com/labstack/echo
   version: 3.3.4
+- package: github.com/dgrijalva/jwt-go
+  version: 3.2.0
