--- a/auth-api/glide.yaml
+++ b/auth-api/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: 3.3.4
 - package: github.com/dgrijalva/jwt-go
   version: 3.2.0
+- package: github.com/joho/godotenv
+  version: 1.2.0
